# mir_rmf_fleet_adapter

configs/: 0.yaml  mir_config.yaml  raslab_03_09_2025.building.yaml
docs/: mir_actions.md
fleet_adapter_mir/: README.md  setup.py
fleet_adapter_mir/fleet_adapter_mir/: mir_api.py  robot_adapter_mir.py
fleet_adapter_mir/launch/: mir_adapter.launch.xml  mir_demo.launch.xml
fleet_adapter_mir_actions/fleet_adapter_mir_actions/: rmf_cart_delivery.py  rmf_cart_detection.py  rmf_move_off.py  rmf_move_off_on_alert.py  rmf_move_off_on_mission.py  rmf_move_off_on_plc.py  rmf_wait_until.py
fleet_adapter_mir_tasks/: setup.py
fleet_adapter_mir_tasks/fleet_adapter_mir_tasks/: dispatch_multistop.py
missions/: rmf_missions.json
rmf_moveit_dispenser/: CMakeLists.txt  package.xml
rmf_moveit_dispenser/src/: moveit_dispenser.cpp  moveit_ingestor.cpp  moveit_ingestor_dummy.cpp
